Temporarily remove search

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^5.1.0
   sticky_headers: ^0.3.0+2
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
